# searchparty

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  drones.py  export.py  gps.py  gps_import.py  incidents.py  lpb.py  mesh.py  oauth.py  reports.py  safety.py  search.py  teams.py  trails.py  users.py
backend/app/auth/: dependencies.py  jwt.py  oauth.py  rate_limit.py
backend/app/db/: connection.py  drones.py  gps.py  incidents.py  mesh.py  migrate.py  safety.py  search.py  seed.py  teams.py  trails.py  users.py
backend/app/db/migrations/: 001_initial_schema.sql  002_gps_tracks.sql  003_search_segments.sql  004_safety.sql  005_trails.sql  006_mesh.sql  007_drones.sql
backend/app/drone/: camera.py  exporters.py  patterns.py  srt_parser.py
backend/app/i18n/: __init__.py
backend/app/i18n/messages/: en.json  hi.json
backend/app/importers/: csv_import.py  fit.py  geojson.py  google_takeout.py  gpx.py  inreach.py  kml.py  models.py  osm_trails.py  shapefile.py
backend/app/models/: drone.py  gps.py  incident.py  reports.py  safety.py  search.py  team.py  trail.py  user.py
backend/app/search/: lpb_data.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_jwt.py  test_auth_password.py  test_drone_patterns.py  test_export_api.py  test_gps_api.py  test_health.py  test_import_parsers.py  test_incident_models.py  test_incidents_api.py  test_lpb.py  test_mesh_api.py  test_models.py  test_pod_math.py  test_rate_limit.py  test_reports_api.py  test_safety_api.py  test_search_api.py  test_teams_api.py  test_trails.py
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  MESH_NETWORK_EXPLORATION.md  MOBILE_BUILD.md  ROADMAP.md  SECURITY.md  start.md
frontend/: capacitor.config.ts  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: MeshDashboard.tsx  SyncStatusIndicator.tsx
frontend/src/components/map/: ClueMarkersLayer.tsx  CompassTool.tsx  GpsTrackLayer.tsx  (+7 more)
frontend/src/hooks/: useGeofence.ts  useGpsTracking.ts  useMesh.ts  useNativeCamera.ts  useNativeCompass.ts  useNativeGps.ts  useSyncStatus.ts
frontend/src/i18n/: config.ts
(+21 files in other folders)
