[project]
name = "searchparty-backend"
version = "0.1.0"
description = "SearchParty - SAR coordination backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
    "httpx>=0.27.0",
    "fitdecode>=0.10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",  # allow assert in tests
    "B008",  # allow function calls in defaults (FastAPI Depends/Query pattern)
    "N817",  # allow CamelCase imported as acronym (e.g., ElementTree as ET)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
